@@ -3,18 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.imrafaelmerino</groupId>
     <artifactId>json-values-benchmark</artifactId>
-    <version>11.7.0</version>
+    <version>12.0.0</version>
     <packaging>jar</packaging>
     <name>json-values-benchmark-${version}</name>
     <properties>
-        <JSON-VALUES.VERSION>11.7.0</JSON-VALUES.VERSION>
+        <JSON-VALUES.VERSION>12.3.2</JSON-VALUES.VERSION>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <JMH-VERSION>1.35</JMH-VERSION>
         <JAVAX-ANNOTATION-VERSION>1.3.2</JAVAX-ANNOTATION-VERSION>
-        <COMPILER_SOURCE_VERSION>1.8</COMPILER_SOURCE_VERSION>
-        <COMPILER_TARGET_VERSION>1.8</COMPILER_TARGET_VERSION>
+        <COMPILER_SOURCE_VERSION>17</COMPILER_SOURCE_VERSION>
+        <COMPILER_TARGET_VERSION>17</COMPILER_TARGET_VERSION>
         <PLUGIN_COMPILER_VERSION>3.8.0</PLUGIN_COMPILER_VERSION>
-        <JACKSON-VERSION>2.13.3</JACKSON-VERSION>
+        <JACKSON-VERSION>2.13.4.1</JACKSON-VERSION>
         <JSON-SCHEMA-VALIDATOR.VERSION>2.2.14</JSON-SCHEMA-VALIDATOR.VERSION>
         <JUSTIFY.VERSION>3.1.0</JUSTIFY.VERSION>
         <VALIDATION-API.VERSION>2.0.1.Final</VALIDATION-API.VERSION>
@@ -25,11 +25,6 @@
         <VERTX-JSON-SCHEMA.VERSION>4.3.1</VERTX-JSON-SCHEMA.VERSION>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.github.imrafaelmerino</groupId>
-            <artifactId>json-scala-values_3</artifactId>
-            <version>5.0.0</version>
-        </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
@@ -93,13 +88,6 @@
             <groupId>com.github.imrafaelmerino</groupId>
             <artifactId>json-values</artifactId>
             <version>${JSON-VALUES.VERSION}</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
     <build>
@@ -108,10 +96,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
-                <configuration>
-                    <skipTests>false</skipTests>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -124,6 +108,7 @@
                     <showWarnings>true</showWarnings>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
